--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Michelle Feng</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
@@ -24,7 +27,7 @@
     <section id="home" class="hero">
         <h1>Hi, I'm Michelle</h1>
         <div class="about-content">
-            <div class="about-image">Your Photo</div>
+            <img src="me.jpg" alt="Michelle Feng" class="about-image">
             <div class="about-text">
                 <p>At <a href="https://factset.com/" target="_blank">FactSet</a>, I work with a mix of enterprise and financial services clients to onboard their data sources and processes onto FactSet.</p>
                 <p>Previously, I've worked at a <a href="https://dnastack.com/" target="_blank">biotech startup</a> and <a href="https://oicr.on.ca/" target="_blank">OICR</a>, wrangling data and building workflows. I graduated from the University of Waterloo where I studed biochemistry and bioinformatics.</p>
@@ -36,12 +39,11 @@
     <section id="about" class="about">
         <div class="container">
             <h2 class="section-title">My Story</h2>
-            <p class="section-subtitle">From biochemistry research to financial data automation</p>
             <div class="about-content">
                 <div class="about-text">
-                    <p>My path into finance wasn't traditional, and that's become my advantage. I started in biochemistry, which led me to bioinformatics—where I discovered my passion for using code to solve complex problems and automate workflows.</p>
-                    <p>Those technical skills became my foundation when I joined the financial services industry. I brought automation expertise from day one, building data pipelines and workflow solutions while simultaneously learning the client-facing and business skills essential to finance.</p>
-                    <p>Now I occupy a unique space: I can architect technical solutions, communicate them clearly to non-technical stakeholders, and understand how they serve business objectives and client needs. It's the combination that makes me effective.</p>
+                    <p>I started as a bioinformatics researcher, where I used code to solve complex problems and automate workflows.</p>
+                    <p>I leaned on those technical skills when I joined the financial services industry. I brought automation and data expertise, while simultaneously learning the client-facing and business skills essential to working with financial stakeholders.</p>
+                    <p>Today: I design and implement technical solutions, communicate to exec-level stakeholders, and bridge the gap between client needs and product integrations.</p>
                 </div>
                 <div class="journey">
                     <div class="journey-item">
@@ -49,16 +51,12 @@
                         <div class="journey-text">Analytical thinking, research methodology, attention to detail in complex systems</div>
                     </div>
                     <div class="journey-item">
-                        <div class="journey-title">💼 Finance Industry</div>
-                        <div class="journey-text">Client-facing roles, understanding business needs, regulatory requirements</div>
-                    </div>
-                    <div class="journey-item">
-                        <div class="journey-title">⚙️ Self-Taught Developer</div>
+                        <div class="journey-title">⚙️ Data Skills</div>
                         <div class="journey-text">Automating workflows, building data pipelines, creating tools that solve real problems</div>
                     </div>
                     <div class="journey-item">
-                        <div class="journey-title">🎯 Unique Value</div>
-                        <div class="journey-text">Technical skills + Financial expertise + Client communication = Solutions that work</div>
+                        <div class="journey-title">💼 Finance Industry</div>
+                        <div class="journey-text">Client-facing roles, understanding business needs, regulatory requirements</div>
                     </div>
                 </div>
             </div>
@@ -68,16 +66,14 @@
     <section id="skills" class="skills">
         <div class="container">
             <h2 class="section-title">Technical Toolkit</h2>
-            <p class="section-subtitle">Tools and technologies I use to solve problems</p>
             <div class="skills-categories">
                 <div class="skill-category">
                     <h3>💻 Programming & Automation</h3>
                     <div class="skill-list">
-                        <div class="skill-item">Python (Pandas, NumPy, Data Analysis)</div>
-                        <div class="skill-item">SQL (Data Queries & Database Management)</div>
-                        <div class="skill-item">Excel VBA & Power Query</div>
+                        <div class="skill-item">Python/Perl</div>
+                        <div class="skill-item">SQL</div>
+                        <div class="skill-item">Excel VBA</div>
                         <div class="skill-item">API Integrations</div>
-                        <div class="skill-item">Task Scheduling & Orchestration</div>
                     </div>
                 </div>
 
@@ -96,7 +92,7 @@
                     <h3>🏢 Financial Services</h3>
                     <div class="skill-list">
                         <div class="skill-item">Client Relationship Management</div>
-                        <div class="skill-item">Portfolio Reporting</div>
+                        <div class="skill-item">Capital Markets Instruments</div>
                         <div class="skill-item">Regulatory Compliance Workflows</div>
                         <div class="skill-item">Risk & Performance Analytics</div>
                         <div class="skill-item">Market Data Processing</div>
@@ -106,11 +102,11 @@
                 <div class="skill-category">
                     <h3>🔧 Tools & Platforms</h3>
                     <div class="skill-list">
-                        <div class="skill-item">Excel (Advanced Functions & Analysis)</div>
-                        <div class="skill-item">Bloomberg Terminal</div>
+                        <div class="skill-item">Excel</div>
+                        <div class="skill-item">Linux</div>
                         <div class="skill-item">Power BI / Tableau</div>
                         <div class="skill-item">Git & Version Control</div>
-                        <div class="skill-item">Cloud Platforms (AWS/Azure basics)</div>
+                        <div class="skill-item">Cloud Platforms</div>
                     </div>
                 </div>
             </div>
@@ -121,7 +117,7 @@
         <div class="container">
             <h2 class="section-title">Let's Connect</h2>
             <div class="contact-content">
-                <p>Interested in discussing data automation, workflow optimization, or how technical skills can solve business problems? I'd love to hear from you.</p>
+                <p>Interested in discussing data automation, workflow optimizations, or how technical skills can solve business problems? I'd love to hear from you.</p>
                 <div class="contact-links">
                     <a href="mailto:michelle.feng@live.ca" class="contact-link">
                         <span>📧</span> Email Me
