--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2026 Michelle Feng. All rights reserved.</p>
+        <p>&copy; 2026 Michelle Feng! All rights reserved.</p>
     </footer>
 </body>
 </html>
