--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 <body>
     <nav>
         <a href="#home" class="nav-name">Michelle Feng</a>
-        <ul>
+        <button class="nav-toggle" aria-label="Toggle navigation">
+            <span class="hamburger"></span>
+        </button>
+        <ul class="nav-links">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">My Story</a></li>
             <li><a href="#skills">Skills</a></li>
@@ -138,6 +141,7 @@
     </footer>
 
     <script>
+        // Theme toggle
         const toggle = document.querySelector('.theme-toggle');
         const icon = toggle.querySelector('.theme-icon');
 
@@ -155,6 +159,23 @@
             const isDark = document.body.classList.contains('dark-mode');
             icon.textContent = isDark ? '🌙' : '☀️';
             localStorage.setItem('theme', isDark ? 'dark' : 'light');
+        });
+
+        // Mobile navigation toggle
+        const navToggle = document.querySelector('.nav-toggle');
+        const navLinks = document.querySelector('.nav-links');
+
+        navToggle.addEventListener('click', () => {
+            navToggle.classList.toggle('active');
+            navLinks.classList.toggle('active');
+        });
+
+        // Close mobile nav when a link is clicked
+        navLinks.querySelectorAll('a').forEach(link => {
+            link.addEventListener('click', () => {
+                navToggle.classList.remove('active');
+                navLinks.classList.remove('active');
+            });
         });
     </script>
 </body>
